@@ -19,7 +19,6 @@
  */
 package io.wcm.handler.mediasource.dam.impl.dynamicmedia;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
@@ -188,15 +187,10 @@ public final class DynamicMediaPath {
    */
   private static String encodeDynamicMediaObject(@NotNull DamContext damContext) {
     String[] pathParts = StringUtils.split(damContext.getDynamicMediaObject(), "/");
-    try {
-      for (int i = 0; i < pathParts.length; i++) {
-        pathParts[i] = URLEncoder.encode(pathParts[i], StandardCharsets.UTF_8.name());
-        // replace "+" with %20 in URL paths
-        pathParts[i] = StringUtils.replace(pathParts[i], "+", "%20");
-      }
-    }
-    catch (UnsupportedEncodingException ex) {
-      throw new RuntimeException("Unsupported encoding.", ex);
+    for (int i = 0; i < pathParts.length; i++) {
+      pathParts[i] = URLEncoder.encode(pathParts[i], StandardCharsets.UTF_8);
+      // replace "+" with %20 in URL paths
+      pathParts[i] = StringUtils.replace(pathParts[i], "+", "%20");
     }
     return StringUtils.join(pathParts, "/");
   }
